--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <!-- Meta refresh redirect (fallback) -->
-     <!-- in use (render-2324)(Ghub-valiant-77) -->
-    <meta http-equiv="refresh" content="0; url=https://web-watcher-gnod.onrender.com/">
+     <!-- in use (render rvce77)(Ghub-Web-Watcher) -->
+    <meta http-equiv="refresh" content="0; url=https://web-watcher-905d.onrender.com">
 </head>
 <body>
     <p>Redirecting...</p>
     
     <script>
         // JavaScript redirect (immediate)
-        window.location.href = "https://web-watcher-gnod.onrender.com/";
+        window.location.href = "https://web-watcher-905d.onrender.com";
     </script>
 </body>
 </html>
 
-<!--https://web-watcher-905d.onrender.com_____(render rvce77)(Ghub-Web-Watcher)--> 
+
+<!--https://web-watcher-gnod.onrender.com-->
